--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 			<h1>Gafurul Islam Kazi</h1>
 			<h2>Web Developer and Software Engineer</h2>
 		</div>
+		<div>Under Construction (written 1/7/2024)</div>
 	</body>
 
 <style>
